--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,9 @@ footer {
   font-size: 10px;
   text-align: center;
 }
+
+.Footer a {
+  text-decoration: none;
+  color: #4788c7;
+  font-weight: bold;
+}
