--- a/src/Search.css
+++ b/src/Search.css
@@ -1,3 +1,37 @@
-form {
+body {
+  background-color: #d4e4f3;
+}
+
+.WordInput {
+  border: 1px solid #4788c7;
+  margin: 20px 0 10px 0;
+  width: 300px;
+  border-radius: 5px;
+  height: 30px;
+}
+
+.Search section {
+  background-color: #ebf4fc;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 10px 10px rgb(0 0 0 / 10%);
+  margin: 40px 0;
+}
+
+.Form {
   text-align: center;
+}
+
+.Submit {
+  margin-left: 10px;
+  width: 100px;
+  border-radius: 5px;
+  height: 30px;
+  border: 0;
+  background-color: #4788c7;
+  color: #fff;
+}
+
+.Example {
+  font-size: 12px;
 }
