Adjusting the photos layout

--- a/src/Search.css
+++ b/src/Search.css
@@ -10,6 +10,11 @@ body {
   height: 30px;
 }
 
+.WordInput:focus {
+  outline: none !important;
+  border: 1px solid #4788c7;
+}
+
 .Search section {
   background-color: #ebf4fc;
   padding: 30px;
